--- a/blog.html
+++ b/blog.html
@@ -28,7 +28,7 @@
                 <div class="collapse navbar-collapse" id="navbarText">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item active">
-                            <a class="nav-link zoom-in" href="index.html">MENU<span class="sr-only">(current)</span></a>
+                            <a class="nav-link zoom-in" href="index.html">MENU</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link zoom-in" href="#">BLOG</a>
