--- a/argentique.html
+++ b/argentique.html
@@ -24,7 +24,7 @@
                 <div class="collapse navbar-collapse" id="navbarText">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item active">
-                            <a class="nav-link zoom-in" href="#">MENU <span class="sr-only">(current)</span></a>
+                            <a class="nav-link zoom-in" href="#">MENU</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link zoom-in" href="blog.html">BLOG</a>
