--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
                     <p>
                         Passionné par la Nature et la biodiversité, je suis parti à l'aventure !
                         Ma passion pour le dessin rend la nature encore plus attrayante !
+                        Bientôt la rubrique <a href="">Dessins</a>
                     </p>
                     <p ><a class="btn btn-secondary zoom-in" href="#" role="button">Contacter »</a></p>
                 </div><!-- /.col-lg-6 -->
