--- a/blog.html
+++ b/blog.html
@@ -76,7 +76,18 @@
             </div>
             <div class="row p-4"></div>
             <!-- end -->
-            
+            <div class="row justify-content-center p-2">
+                <div class="col-lg-2 col-md-6 col-sm-10  col-6 rounded-pill text-center">
+                    <a href="#"><span class="badge rounded-pill text-dark zoom-in"><i class="fab fa-instagram  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
+                    <a href="#"><span class="badge rounded-pill  text-dark zoom-in"><i class="fab fa-facebook mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
+                    <a href="#"><span class="badge rounded-pill text-dark zoom-in"><i class="fab fa-linkedin  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
+                </div>
+            </div>
+            <!-- Copyright -->
+            <div class="text-center text-black text-decoration-none p-3">
+                © 2071 Copyright:
+                <a href="index.html" style="color: black;">PROJET CANADA!</a>
+            </div>
         </div>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
