--- a/calanques.html
+++ b/calanques.html
@@ -59,16 +59,15 @@
                 </div>
                 <div class="col-md-5 col-sm-10 align-self-center p-2">
                     <div class="row p-5">
-                        <p class="display-5">Titre 1</p>
+                        <p class="display-5">Le Lieu</p>
                     </div>
                     <div class="row p-3">
                         <div class="col">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Ut nec purus vel nunc efficitur dignissim. Donec bibendum magna a massa lobortis,
-                            in malesuada libero suscipit. Integer elit felis, egestas fermentum mauris pharetra, volutpat lacinia odio.
-                            Suspendisse in pellentesque nisi. Nulla facilisis dui in ipsum elementum ultricies.
-                            Vestibulum pulvinar, arcu vel porta imperdiet, sem augue tincidunt mi, sit amet molestie
-                            est orci vitae lacus. In feugiat purus in porta posuere.
+                            Situé à proximité de la ville charmante de Cassis, ce lieu est magique, même pour
+                            un local les paysages restent époustouflant. On redécouvre la grandeur de notre région.
+                            Une fois une place trouvé (ce qui n'est pas simple), un long et épais sentier fait route vers
+                            les plus petites routes qui s'offrent à vôtre choix. Personellement nous avions choisis le chemin
+                            le plus long et difficile. Objectif : Les crêtes d'En vau, Belvédère où l'Archipel de Riou est visible.
                         </div>
                     </div>
                 </div>
@@ -76,16 +75,13 @@
             <div class="row justify-content-center p-3 text-center text-muted">
                 <div class="col-md-5 col-sm-10 align-self-center p-2">
                     <div class="row p-5">
-                        <p class="display-5">Titre 1</p>
+                        <p class="display-5">Archipel de Riou</p>
                     </div>
                     <div class="row p-3">
                         <div class="col">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Ut nec purus vel nunc efficitur dignissim. Donec bibendum magna a massa lobortis,
-                            in malesuada libero suscipit. Integer elit felis, egestas fermentum mauris pharetra, volutpat lacinia odio.
-                            Suspendisse in pellentesque nisi. Nulla facilisis dui in ipsum elementum ultricies.
-                            Vestibulum pulvinar, arcu vel porta imperdiet, sem augue tincidunt mi, sit amet molestie
-                            est orci vitae lacus. In feugiat purus in porta posuere.
+                            On aperçoit au loin l'Archipel de Riou, je sors alors mon appareil photo
+                            pour capturer quelques souvenirs. On arrive aussi à voir sur les falaises
+                            un groupe de grimpeur, on les admirent quelques moments avant de s'arreter pour manger.
                         </div>
                     </div>
                 </div>
@@ -103,12 +99,9 @@
                     </div>
                     <div class="row p-3">
                         <div class="col">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Ut nec purus vel nunc efficitur dignissim. Donec bibendum magna a massa lobortis,
-                            in malesuada libero suscipit. Integer elit felis, egestas fermentum mauris pharetra, volutpat lacinia odio.
-                            Suspendisse in pellentesque nisi. Nulla facilisis dui in ipsum elementum ultricies.
-                            Vestibulum pulvinar, arcu vel porta imperdiet, sem augue tincidunt mi, sit amet molestie
-                            est orci vitae lacus. In feugiat purus in porta posuere.
+                            Assis sur la crête où l'on aperçoit l'Archipel, une bonne pause est nécessaire.
+                            Après plusieurs heures de marche en dénivelé (les crêtes sont plutôt hautes),
+                            tout le monde s'assoit et prend sa pause repas : saucisson, sandwich, salade...
                         </div>
                     </div>
                 </div>
