--- a/blog.html
+++ b/blog.html
@@ -34,7 +34,7 @@
                             <a class="nav-link zoom-in" href="#">BLOG</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link zoom-in" href="#">PHOTOGRAPHIE</a>
+                            <a class="nav-link zoom-in" href="photographie.html">PHOTOGRAPHIE</a>
                         </li>
                     </ul>
                     <span class="navbar-text" style="font-size:20px;">
