--- a/argentique.html
+++ b/argentique.html
@@ -30,7 +30,7 @@
                             <a class="nav-link zoom-in" href="blog.html">BLOG</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link zoom-in" href="#">PHOTOGRAPHIE</a>
+                            <a class="nav-link zoom-in" href="photographie.html">PHOTOGRAPHIE</a>
                         </li>
                     </ul>
                     <span class="navbar-text" style="font-size:20px;">
