--- a/nimes.html
+++ b/nimes.html
@@ -16,102 +16,11 @@
     </head>
     <body class="text-light d-flex h-100 fade-in" style="background-color: #f5f6fa ; font-family: 'Jura', sans-serif;">
         <div class="container text-decoration-none text-dark">
-            <div class="row p-4"></div>
-            <div class="row p-4 justify-content-center">
-                <div class="col-12 text-center">
-                    <p class="display-3">Concert à Nîmes</p>
+            <div class="row p-4">
+                <div class="col">
+                    <p class="display-1">PAGE EN COURS DE CREATION</p>
                 </div>
-            </div>
-            <div class="row p-4 justify-content-center ">
-                <div class="col-12 m-4">
-                    <img class="img-fluid" src="IMG/carousel/calanques/calanque.jpg" alt=""/>
-                </div>                
-            </div>
-            <div class="row p-5"></div>
-            <div class="row p-2"></div>
-            <div class="row justify-content-center p-3 text-center text-muted">
-                <div class="col-md-7 col-sm-12 align-self-center p-2">
-                    <img  class="img-fluid" src="IMG/carousel/calanques/calanque_3.jpg" alt="img1" style=""/>
-                </div>
-                <div class="col-md-5 col-sm-10 align-self-center p-2">
-                    <div class="row p-5">
-                        <p class="display-5">Titre 1</p>
-                    </div>
-                    <div class="row p-3">
-                        <div class="col">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Ut nec purus vel nunc efficitur dignissim. Donec bibendum magna a massa lobortis,
-                            in malesuada libero suscipit. Integer elit felis, egestas fermentum mauris pharetra, volutpat lacinia odio.
-                            Suspendisse in pellentesque nisi. Nulla facilisis dui in ipsum elementum ultricies.
-                            Vestibulum pulvinar, arcu vel porta imperdiet, sem augue tincidunt mi, sit amet molestie
-                            est orci vitae lacus. In feugiat purus in porta posuere.
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row justify-content-center p-3 text-center text-muted">
-                <div class="col-md-5 col-sm-10 align-self-center p-2">
-                    <div class="row p-5">
-                        <p class="display-5">Titre 1</p>
-                    </div>
-                    <div class="row p-3">
-                        <div class="col">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Ut nec purus vel nunc efficitur dignissim. Donec bibendum magna a massa lobortis,
-                            in malesuada libero suscipit. Integer elit felis, egestas fermentum mauris pharetra, volutpat lacinia odio.
-                            Suspendisse in pellentesque nisi. Nulla facilisis dui in ipsum elementum ultricies.
-                            Vestibulum pulvinar, arcu vel porta imperdiet, sem augue tincidunt mi, sit amet molestie
-                            est orci vitae lacus. In feugiat purus in porta posuere.
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-7 col-sm-12 align-self-center p-2">
-                    <img  class="img-fluid" src="IMG/carousel/calanques/calanque_2.jpg" alt="img1" style=""/>
-                </div>
-            </div>
-            <div class="row justify-content-center p-3 text-center text-muted">
-                <div class="col-md-7 col-sm-12 align-self-center p-2">
-                    <img  class="img-fluid" src="IMG/carousel/calanques/calanque_4.jpg" alt="img1" style=""/>
-                </div>
-                <div class="col-md-5 col-sm-10 align-self-center p-2">
-                    <div class="row p-5">
-                        <p class="display-5">Titre 1</p>
-                    </div>
-                    <div class="row p-3">
-                        <div class="col">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Ut nec purus vel nunc efficitur dignissim. Donec bibendum magna a massa lobortis,
-                            in malesuada libero suscipit. Integer elit felis, egestas fermentum mauris pharetra, volutpat lacinia odio.
-                            Suspendisse in pellentesque nisi. Nulla facilisis dui in ipsum elementum ultricies.
-                            Vestibulum pulvinar, arcu vel porta imperdiet, sem augue tincidunt mi, sit amet molestie
-                            est orci vitae lacus. In feugiat purus in porta posuere.
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row justify-content-center p-3 text-center text-muted">
-                <div class="col-md-5 col-sm-10 align-self-center p-2">
-                    <div class="row p-5">
-                        <p class="display-5">Titre 1</p>
-                    </div>
-                    <div class="row p-3">
-                        <div class="col">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Ut nec purus vel nunc efficitur dignissim. Donec bibendum magna a massa lobortis,
-                            in malesuada libero suscipit. Integer elit felis, egestas fermentum mauris pharetra, volutpat lacinia odio.
-                            Suspendisse in pellentesque nisi. Nulla facilisis dui in ipsum elementum ultricies.
-                            Vestibulum pulvinar, arcu vel porta imperdiet, sem augue tincidunt mi, sit amet molestie
-                            est orci vitae lacus. In feugiat purus in porta posuere.
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-7 col-sm-12 align-self-center p-2">
-                    <img  class="img-fluid" src="IMG/carousel/calanques/calanque_3.jpg" alt="img1" style=""/>
-                </div>
-            </div>
-            <div class="row justify-content-center p-3 text-center">
-                
-            </div>
+            </div>            
         </div>
     </body>
 </html>
