--- a/photographie.html
+++ b/photographie.html
@@ -51,7 +51,7 @@
             <div class="row p-5 justify-content-center fw-bold">               
                 <div class="col-lg-4 col-md-12 p-4 m-2rem">
                     <div class="container1">
-                        <img class="img-fluid image1" src="IMG/portfolio/landscape1.jpg" alt="" >
+                        <img class="img-fluid image1" src="IMG/portfolio/landscape1.JPG" alt="" >
                         <div class="overlay1">
                             <div class="text1">LANDSCAPE</div>
                         </div>
