--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <!-- A FAIRE :
-    1- dans le menu, page resumé blog + lien blog qui ancre vers labas
-    2- page blog avec tous les blogs ... !DONE!
-    3- les blogs ... (ptite balise ou map avec le lieu /adresse)
+    -page catégorie ...
+    -compresser les images (vol + temps chargement)
 -->
 <html>
     <head>
