--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- A FAIRE :
-    -page catégorie ...
+    -page catégorie de photos...
     -compresser les images (vol + temps chargement)
 -->
 <html>
