--- a/argentique.html
+++ b/argentique.html
@@ -24,7 +24,7 @@
                 <div class="collapse navbar-collapse" id="navbarText">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item active">
-                            <a class="nav-link zoom-in" href="#">MENU</a>
+                            <a class="nav-link zoom-in" href="index.html">MENU</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link zoom-in" href="blog.html">BLOG</a>
@@ -34,108 +34,18 @@
                         </li>
                     </ul>
                     <span class="navbar-text" style="font-size:20px;">
-                        <a href="#"><span class="badge rounded-pill text-dark zoom-in"><i class="fab fa-instagram  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
+                        <a href="https://www.instagram.com/k.c_travels/"><span class="badge rounded-pill text-dark zoom-in"><i class="fab fa-instagram  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
                         <a href="#"><span class="badge rounded-pill  text-dark zoom-in"><i class="fab fa-facebook mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
                         <a href="#"><span class="badge rounded-pill text-dark zoom-in"><i class="fab fa-linkedin  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
                     </span>
                 </div>
             </nav>
             <div class="row p-4"></div>
-            <div class="row p-4 justify-content-center">
-                <div class="col-12 text-center">
-                    <p class="display-3">Randonnée Argentique</p>
+            <div class="row p-4">
+                <div class="col">
+                    <p class="display-1">PAGE EN COURS DE CREATION</p>
                 </div>
-            </div>
-            <div class="row p-4 justify-content-center ">
-                <div class="col-12 m-4">
-                    <img class="img-fluid" src="IMG/carousel/calanques/calanque.jpg" alt=""/>
-                </div>                
-            </div>
-            <div class="row p-5"></div>
-            <div class="row p-2"></div>
-            <div class="row justify-content-center p-3 text-center text-muted">
-                <div class="col-md-7 col-sm-12 align-self-center p-2">
-                    <img  class="img-fluid" src="IMG/carousel/calanques/calanque_3.jpg" alt="img1" style=""/>
-                </div>
-                <div class="col-md-5 col-sm-10 align-self-center p-2">
-                    <div class="row p-5">
-                        <p class="display-5">Titre 1</p>
-                    </div>
-                    <div class="row p-3">
-                        <div class="col">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Ut nec purus vel nunc efficitur dignissim. Donec bibendum magna a massa lobortis,
-                            in malesuada libero suscipit. Integer elit felis, egestas fermentum mauris pharetra, volutpat lacinia odio.
-                            Suspendisse in pellentesque nisi. Nulla facilisis dui in ipsum elementum ultricies.
-                            Vestibulum pulvinar, arcu vel porta imperdiet, sem augue tincidunt mi, sit amet molestie
-                            est orci vitae lacus. In feugiat purus in porta posuere.
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row justify-content-center p-3 text-center text-muted">
-                <div class="col-md-5 col-sm-10 align-self-center p-2">
-                    <div class="row p-5">
-                        <p class="display-5">Titre 1</p>
-                    </div>
-                    <div class="row p-3">
-                        <div class="col">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Ut nec purus vel nunc efficitur dignissim. Donec bibendum magna a massa lobortis,
-                            in malesuada libero suscipit. Integer elit felis, egestas fermentum mauris pharetra, volutpat lacinia odio.
-                            Suspendisse in pellentesque nisi. Nulla facilisis dui in ipsum elementum ultricies.
-                            Vestibulum pulvinar, arcu vel porta imperdiet, sem augue tincidunt mi, sit amet molestie
-                            est orci vitae lacus. In feugiat purus in porta posuere.
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-7 col-sm-12 align-self-center p-2">
-                    <img  class="img-fluid" src="IMG/carousel/calanques/calanque_2.jpg" alt="img1" style=""/>
-                </div>
-            </div>
-            <div class="row justify-content-center p-3 text-center text-muted">
-                <div class="col-md-7 col-sm-12 align-self-center p-2">
-                    <img  class="img-fluid" src="IMG/carousel/calanques/calanque_4.jpg" alt="img1" style=""/>
-                </div>
-                <div class="col-md-5 col-sm-10 align-self-center p-2">
-                    <div class="row p-5">
-                        <p class="display-5">Titre 1</p>
-                    </div>
-                    <div class="row p-3">
-                        <div class="col">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Ut nec purus vel nunc efficitur dignissim. Donec bibendum magna a massa lobortis,
-                            in malesuada libero suscipit. Integer elit felis, egestas fermentum mauris pharetra, volutpat lacinia odio.
-                            Suspendisse in pellentesque nisi. Nulla facilisis dui in ipsum elementum ultricies.
-                            Vestibulum pulvinar, arcu vel porta imperdiet, sem augue tincidunt mi, sit amet molestie
-                            est orci vitae lacus. In feugiat purus in porta posuere.
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row justify-content-center p-3 text-center text-muted">
-                <div class="col-md-5 col-sm-10 align-self-center p-2">
-                    <div class="row p-5">
-                        <p class="display-5">Titre 1</p>
-                    </div>
-                    <div class="row p-3">
-                        <div class="col">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Ut nec purus vel nunc efficitur dignissim. Donec bibendum magna a massa lobortis,
-                            in malesuada libero suscipit. Integer elit felis, egestas fermentum mauris pharetra, volutpat lacinia odio.
-                            Suspendisse in pellentesque nisi. Nulla facilisis dui in ipsum elementum ultricies.
-                            Vestibulum pulvinar, arcu vel porta imperdiet, sem augue tincidunt mi, sit amet molestie
-                            est orci vitae lacus. In feugiat purus in porta posuere.
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-7 col-sm-12 align-self-center p-2">
-                    <img  class="img-fluid" src="IMG/carousel/calanques/calanque_3.jpg" alt="img1" style=""/>
-                </div>
-            </div>
-            <div class="row justify-content-center p-3 text-center">
-
-            </div>
+            </div> 
         </div>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
