--- a/nimes.html
+++ b/nimes.html
@@ -16,6 +16,30 @@
     </head>
     <body class="text-light d-flex h-100 fade-in" style="background-color: #f5f6fa ; font-family: 'Jura', sans-serif;">
         <div class="container text-decoration-none text-dark">
+            <nav class="navbar navbar-expand-lg navbar-light" id="nav1">
+                <a class="navbar-brand" href="#"><img class="rounded-circle" src="IMG/logo1.png" alt="Generic placeholder image" width="50" height="50"></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarText">
+                    <ul class="navbar-nav me-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link zoom-in" href="index.html">MENU</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link zoom-in" href="#">BLOG</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link zoom-in" href="photographie.html">PHOTOGRAPHIE</a>
+                        </li>
+                    </ul>
+                    <span class="navbar-text" style="font-size:20px;">
+                        <a href="https://www.instagram.com/k.c_travels/"><span class="badge rounded-pill text-dark zoom-in"><i class="fab fa-instagram  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
+                        <a href="#"><span class="badge rounded-pill  text-dark zoom-in"><i class="fab fa-facebook mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
+                        <a href="#"><span class="badge rounded-pill text-dark zoom-in"><i class="fab fa-linkedin  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
+                    </span>
+                </div>
+            </nav>
             <div class="row p-4">
                 <div class="col">
                     <p class="display-1">PAGE EN COURS DE CREATION</p>
