--- a/photographie.html
+++ b/photographie.html
@@ -28,14 +28,14 @@
                             <a class="nav-link zoom-in" href="index.html">MENU<span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link zoom-in" href="#">BLOG</a>
+                            <a class="nav-link zoom-in" href="blog.html">BLOG</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link zoom-in" href="photographie.html">PHOTOGRAPHIE</a>
                         </li>
                     </ul>                  
                     <span class="navbar-text" style="font-size:20px;">
-                        <a href="#"><span class="badge rounded-pill text-dark zoom-in"><i class="fab fa-instagram  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
+                        <a href="https://www.instagram.com/k.c_travels/"><span class="badge rounded-pill text-dark zoom-in"><i class="fab fa-instagram  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
                         <a href="#"><span class="badge rounded-pill  text-dark zoom-in"><i class="fab fa-facebook mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
                         <a href="#"><span class="badge rounded-pill text-dark zoom-in"><i class="fab fa-linkedin  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
                     </span>
