--- a/calanques.html
+++ b/calanques.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+    <!--
+        TO COMPLETE :
+            -responsiveness des articles
+            -            
+    -->
     <head>
         <title>Calanques-K&C</title>
         <meta charset="utf-8">
@@ -24,7 +29,7 @@
                 <div class="collapse navbar-collapse" id="navbarText">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item active">
-                            <a class="nav-link zoom-in" href="index.html">MENU></a>
+                            <a class="nav-link zoom-in" href="index.html">MENU</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link zoom-in" href="blog.html">BLOG</a>
@@ -49,10 +54,11 @@
             <div class="row p-4 justify-content-center ">
                 <div class="col-12 m-4">
                     <img class="img-fluid" src="IMG/carousel/calanques/calanque.jpg" alt=""/>
-                </div>                
+                </div>
             </div>
             <div class="row p-5"></div>
             <div class="row p-2"></div>
+            
             <div class="row justify-content-center p-3 text-center text-muted">
                 <div class="col-md-7 col-sm-12 align-self-center p-2">
                     <img  class="img-fluid" src="IMG/carousel/calanques/calanque_3.jpg" alt="img1" style=""/>
@@ -72,63 +78,66 @@
                     </div>
                 </div>
             </div>
+
             <div class="row justify-content-center p-3 text-center text-muted">
                 <div class="col-md-5 col-sm-10 align-self-center p-2">
                     <div class="row p-5">
                         <p class="display-5">Archipel de Riou</p>
                     </div>
                     <div class="row p-3">
-                        <div class="col">
+                        <div class="col d-none d-lg-block">
                             On aperçoit au loin l'Archipel de Riou, je sors alors mon appareil photo
                             pour capturer quelques souvenirs. On arrive aussi à voir sur les falaises
                             un groupe de grimpeur, on les admirent quelques moments avant de s'arreter pour manger.
                         </div>
-                    </div>
+                    </div>                    
                 </div>
                 <div class="col-md-7 col-sm-12 align-self-center p-2">
                     <img  class="img-fluid" src="IMG/carousel/calanques/calanque_2.jpg" alt="img1" style=""/>
                 </div>
+                <div class="row p-3">
+                    <div class="col d-none d-sm-block d-md-block d-lg-none">
+                        On aperçoit au loin l'Archipel de Riou, je sors alors mon appareil photo
+                        pour capturer quelques souvenirs. On arrive aussi à voir sur les falaises
+                        un groupe de grimpeur, on les admirent quelques moments avant de s'arreter pour manger.
+                    </div>
+                </div>
             </div>
+
             <div class="row justify-content-center p-3 text-center text-muted">
                 <div class="col-md-7 col-sm-12 align-self-center p-2">
                     <img  class="img-fluid" src="IMG/carousel/calanques/calanque_4.jpg" alt="img1" style=""/>
                 </div>
                 <div class="col-md-5 col-sm-10 align-self-center p-2">
                     <div class="row p-5">
-                        <p class="display-5">Titre 1</p>
+                        <p class="display-5">Pause repas</p>
                     </div>
                     <div class="row p-3">
                         <div class="col">
                             Assis sur la crête où l'on aperçoit l'Archipel, une bonne pause est nécessaire.
                             Après plusieurs heures de marche en dénivelé (les crêtes sont plutôt hautes),
-                            tout le monde s'assoit et prend sa pause repas : saucisson, sandwich, salade...
+                            tout le monde s'assoit et prend sa pause repas : saucisson, sandwich, salade...                        
                         </div>
                     </div>
                 </div>
             </div>
+
             <div class="row justify-content-center p-3 text-center text-muted">
                 <div class="col-md-5 col-sm-10 align-self-center p-2">
                     <div class="row p-5">
-                        <p class="display-5">Titre 1</p>
+                        <p class="display-5">SOON</p>
                     </div>
                     <div class="row p-3">
                         <div class="col">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Ut nec purus vel nunc efficitur dignissim. Donec bibendum magna a massa lobortis,
-                            in malesuada libero suscipit. Integer elit felis, egestas fermentum mauris pharetra, volutpat lacinia odio.
-                            Suspendisse in pellentesque nisi. Nulla facilisis dui in ipsum elementum ultricies.
-                            Vestibulum pulvinar, arcu vel porta imperdiet, sem augue tincidunt mi, sit amet molestie
-                            est orci vitae lacus. In feugiat purus in porta posuere.
+                            SUITE BIENTÔT... <!--TO COMPLETE-->
                         </div>
                     </div>
                 </div>
                 <div class="col-md-7 col-sm-12 align-self-center p-2">
-                    <img  class="img-fluid" src="IMG/carousel/calanques/calanque_3.jpg" alt="img1" style=""/>
+                    <img  class="img-fluid" src="IMG/carousel/calanques/" alt="img1" style=""/>
                 </div>
             </div>
-            <div class="row justify-content-center p-3 text-center">
 
-            </div>
         </div>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
