beautify + footer(all pages) + blog (text)+responsive

--- a/calanques.html
+++ b/calanques.html
@@ -56,15 +56,18 @@
                     <img class="img-fluid" src="IMG/carousel/calanques/calanque.jpg" alt=""/>
                 </div>
             </div>
-            <div class="row p-5"></div>
-            <div class="row p-2"></div>
+            <div class="row p-lg-5"></div>
+            <div class="row p-lg-2"></div>
             
             <div class="row justify-content-center p-3 text-center text-muted">
+                <div class="row p-5 d-none d-sm-block d-md-block d-lg-none">
+                    <p class="display-5">Le Lieu</p>
+                </div>
                 <div class="col-md-7 col-sm-12 align-self-center p-2">
                     <img  class="img-fluid" src="IMG/carousel/calanques/calanque_3.jpg" alt="img1" style=""/>
                 </div>
                 <div class="col-md-5 col-sm-10 align-self-center p-2">
-                    <div class="row p-5">
+                    <div class="row p-5 d-none d-sm-none d-md-none d-lg-block">
                         <p class="display-5">Le Lieu</p>
                     </div>
                     <div class="row p-3">
@@ -81,7 +84,7 @@
 
             <div class="row justify-content-center p-3 text-center text-muted">
                 <div class="col-md-5 col-sm-10 align-self-center p-2">
-                    <div class="row p-5">
+                    <div class="row p-lg-5">
                         <p class="display-5">Archipel de Riou</p>
                     </div>
                     <div class="row p-3">
@@ -103,13 +106,15 @@
                     </div>
                 </div>
             </div>
-
             <div class="row justify-content-center p-3 text-center text-muted">
+                <div class="row p-5 d-none d-sm-block d-md-block d-lg-none">
+                    <p class="display-5">Pause repas</p>
+                </div>
                 <div class="col-md-7 col-sm-12 align-self-center p-2">
                     <img  class="img-fluid" src="IMG/carousel/calanques/calanque_4.jpg" alt="img1" style=""/>
                 </div>
                 <div class="col-md-5 col-sm-10 align-self-center p-2">
-                    <div class="row p-5">
+                    <div class="row p-5 d-none d-sm-none d-md-none d-lg-block">
                         <p class="display-5">Pause repas</p>
                     </div>
                     <div class="row p-3">
@@ -137,7 +142,18 @@
                     <img  class="img-fluid" src="IMG/carousel/calanques/" alt="img1" style=""/>
                 </div>
             </div>
-
+            <div class="row justify-content-center p-2">
+                <div class="col-lg-2 col-md-6 col-sm-10  col-6 rounded-pill text-center">
+                    <a href="https://www.instagram.com/k.c_travels/"><span class="badge rounded-pill text-dark zoom-in"><i class="fab fa-instagram  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
+                    <a href="#"><span class="badge rounded-pill  text-dark zoom-in"><i class="fab fa-facebook mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
+                    <a href="#"><span class="badge rounded-pill text-dark zoom-in"><i class="fab fa-linkedin  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
+                </div>
+            </div>
+            <!-- Copyright -->
+            <div class="text-center text-black text-decoration-none p-3">
+                © 2071 Copyright:
+                <a href="index.html" style="color: black;">PROJET CANADA!</a>
+            </div>
         </div>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
