--- a/nimes.html
+++ b/nimes.html
@@ -44,6 +44,18 @@
                 <div class="col">
                     <p class="display-1">PAGE EN COURS DE CREATION</p>
                 </div>
+            </div>
+            <div class="row justify-content-center p-2">
+                <div class="col-lg-2 col-md-6 col-sm-10  col-6 rounded-pill text-center">
+                    <a href="https://www.instagram.com/k.c_travels/"><span class="badge rounded-pill text-dark zoom-in"><i class="fab fa-instagram  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
+                    <a href="#"><span class="badge rounded-pill  text-dark zoom-in"><i class="fab fa-facebook mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
+                    <a href="#"><span class="badge rounded-pill text-dark zoom-in"><i class="fab fa-linkedin  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
+                </div>
+            </div>
+            <!-- Copyright -->
+            <div class="text-center text-black text-decoration-none p-3">
+                © 2071 Copyright:
+                <a href="index.html" style="color: black;">PROJET CANADA!</a>
             </div>            
         </div>
     </body>
