--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!-- A FAIRE :
     -page catégorie de photos...
     -alimenter le blog...
+    -selecteur de langue (voir tuto)
 -->
 <html>
     <head>
