--- a/calanques.html
+++ b/calanques.html
@@ -73,9 +73,9 @@
                     <div class="row p-3">
                         <div class="col">
                             Situé à proximité de la ville charmante de Cassis, ce lieu est magique, même pour
-                            un local les paysages restent époustouflant. On redécouvre la grandeur de notre région.
-                            Une fois une place trouvé (ce qui n'est pas simple), un long et épais sentier fait route vers
-                            les plus petites routes qui s'offrent à vôtre choix. Personellement nous avions choisis le chemin
+                            un local les paysages restent époustouflants. On redécouvre la grandeur de notre région.
+                            Une fois une place trouvée (ce qui n'est pas simple), un long et épais chemin mène vers
+                            les plus petits sentiers qui s'offrent à votre choix. Personellement, nous avions choisi le chemin
                             le plus long et difficile. Objectif : Les crêtes d'En vau, Belvédère où l'Archipel de Riou est visible.
                         </div>
                     </div>
@@ -91,7 +91,7 @@
                         <div class="col d-none d-lg-block">
                             On aperçoit au loin l'Archipel de Riou, je sors alors mon appareil photo
                             pour capturer quelques souvenirs. On arrive aussi à voir sur les falaises
-                            un groupe de grimpeur, on les admirent quelques moments avant de s'arreter pour manger.
+                            un groupe de grimpeurs, on les admire quelques moments avant de s'arréter pour manger.
                         </div>
                     </div>                    
                 </div>
@@ -102,7 +102,7 @@
                     <div class="col d-none d-sm-block d-md-block d-lg-none">
                         On aperçoit au loin l'Archipel de Riou, je sors alors mon appareil photo
                         pour capturer quelques souvenirs. On arrive aussi à voir sur les falaises
-                        un groupe de grimpeur, on les admirent quelques moments avant de s'arreter pour manger.
+                        un groupe de grimpeurs, on les admire quelques moments avant de s'arréter pour manger.
                     </div>
                 </div>
             </div>
