--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     </div>
                     <h2>Kevin</h2>
                     <p>
-                        Agé de 18 ans et passioné de paysage et de photographie, j'ai tout quitté pour me consacrer à mes passions !
+                        Agé de 18 ans et passionné de paysages et de photographie, j'ai tout quitté pour me consacrer à mes passions !
                         Retrouver l'intégralité de mes photos dans la rubrique <a href="">About Kevin</a>
                     </p>
                     <p><a class="btn btn-secondary zoom-in" href="#" role="button">Contacter »</a></p>
@@ -133,7 +133,7 @@
                     </div>
                     <h2>Clara</h2>
                     <p>
-                        Passionné par la Nature et la biodiversité, je suis parti à l'aventure !
+                        Passionnée par la Nature et la biodiversité, je suis partie à l'aventure !
                         Ma passion pour le dessin rend la nature encore plus attrayante !
                         Bientôt la rubrique <a href="">Dessins</a>
                     </p>
