page landscape + link to landscape

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     -page catégorie de photos...
     -alimenter le blog...
     -selecteur de langue (voir tuto)
+    -animation menu déroulant téléphone (bug)
 -->
 <html>
     <head>
