--- a/calanques.html
+++ b/calanques.html
@@ -3,7 +3,7 @@
     <!--
         TO COMPLETE :
             -responsiveness des articles
-            -            
+            -playlist musique commune            
     -->
     <head>
         <title>Calanques-K&C</title>
@@ -60,7 +60,7 @@
             <div class="row p-lg-2"></div>
             
             <div class="row justify-content-center p-3 text-center text-muted">
-                <div class="row p-5 d-none d-sm-block d-md-block d-lg-none">
+                <div class="row p-5 d-block d-sm-block d-md-block d-lg-none">
                     <p class="display-5">Le Lieu</p>
                 </div>
                 <div class="col-md-7 col-sm-12 align-self-center p-2">
@@ -99,7 +99,7 @@
                     <img  class="img-fluid" src="IMG/carousel/calanques/calanque_2.jpg" alt="img1" style=""/>
                 </div>
                 <div class="row p-3">
-                    <div class="col d-none d-sm-block d-md-block d-lg-none">
+                    <div class="col d-lg-none">
                         On aperçoit au loin l'Archipel de Riou, je sors alors mon appareil photo
                         pour capturer quelques souvenirs. On arrive aussi à voir sur les falaises
                         un groupe de grimpeurs, on les admire quelques moments avant de s'arréter pour manger.
@@ -107,7 +107,7 @@
                 </div>
             </div>
             <div class="row justify-content-center p-3 text-center text-muted">
-                <div class="row p-5 d-none d-sm-block d-md-block d-lg-none">
+                <div class="row p-3 p-lg-5 d-block d-sm-block d-md-block d-lg-none">
                     <p class="display-5">Pause repas</p>
                 </div>
                 <div class="col-md-7 col-sm-12 align-self-center p-2">
