--- a/landscape.html
+++ b/landscape.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
         <title>Argentique-K&C</title>
         <meta charset="utf-8">
@@ -47,7 +47,7 @@
                 </div>
             </div>
             <div>
-
+                
             </div>
             
 
