--- a/landscape.html
+++ b/landscape.html
@@ -20,7 +20,7 @@
                 <a class="navbar-brand" href="index.html"><img class="rounded-circle" src="IMG/logo1.png" alt="Generic placeholder image" width="50" height="50"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
-                </button>
+                </button>                
                 <div class="collapse navbar-collapse" id="navbarText">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item active">
@@ -46,17 +46,11 @@
                     <p class="display-4">PORTFOLIO</p>
                 </div>
             </div>
-            <div>
-                
+            <div class="row justify-content-center text-center p-5">
+                <div class="col"></div>
             </div>
-            
 
             <div class="row p-4"></div>
-            <div class="row p-4">
-                <div class="col">
-                    <p class="display-5">PAGE EN COURS DE CREATION</p>
-                </div>
-            </div>
             <div class="row justify-content-center p-2">
                 <div class="col-lg-2 col-md-6 col-sm-10  col-6 rounded-pill text-center">
                     <a href="https://www.instagram.com/k.c_travels/"><span class="badge rounded-pill text-dark zoom-in"><i class="fab fa-instagram  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
