--- a/landscape.html
+++ b/landscape.html
@@ -55,14 +55,79 @@
             </div>
         </div>
         <div class="row justify-content-center text-center p-5">
-            <div class="col-12 p-5">
-                <img class="img-fluid img_thumb" src="IMG\portfolio\landscape\1_land.JPG" alt="">
+            <div class="col-12 p-lg-5 pb-4">
+                <div class="container1">
+                    <img class="img-fluid img_thumb" src="IMG\portfolio\landscape\1_land.JPG" alt="">
+                    <div class="overlay2">
+                        <div class="text_bott_center">
+                            Anse Méjean
+                            <br>
+                            <p style="font-size:1.1vw;">Lorem ipsum dolor sit amet consectetur.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="col-12 p-5">
-                <img class="img-fluid img_thumb" src="IMG\portfolio\landscape\3_land.JPG" alt="">
+
+            <div class="col-12 p-lg-5 pb-4">
+                <div class="container1">
+                    <img class="img-fluid img_thumb" src="IMG\portfolio\landscape\3_land.JPG" alt="">
+                    <div class="overlay2">
+                        <div class="text_bott_center">
+                            TITRE
+                            <br>
+                            <p style="font-size:1.1vw;">Lorem ipsum dolor sit amet consectetur.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="col-12 p-5">
-                <img class="img-fluid img_thumb" src="IMG\portfolio\landscape\2_land.JPG" alt="">
+
+            <div class="col-12 p-lg-5 pb-4">
+                <div class="container1">
+                    <img class="img-fluid img_thumb" src="IMG\portfolio\landscape\2_land.JPG" alt="">
+                    <div class="overlay2">
+                        <div class="text_bott_center">
+                            TITRE
+                            <br>
+                            <p style="font-size:1.1vw;">Lorem ipsum dolor sit amet consectetur.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 p-lg-5 pb-4">
+                <div class="container1">
+                    <img class="img-fluid img_thumb" src="IMG\portfolio\landscape\4_land.JPG" alt="">
+                    <div class="overlay2">
+                        <div class="text_bott_center">
+                            TITRE
+                            <br>
+                            <p style="font-size:1.1vw;">Lorem ipsum dolor sit amet consectetur.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 p-lg-5 pb-4">
+                <div class="container1">
+                    <img class="img-fluid img_thumb" src="IMG\portfolio\landscape\5_land.JPG" alt="">
+                    <div class="overlay2">
+                        <div class="text_bott_center">
+                            TITRE
+                            <br>
+                            <p style="font-size:1.1vw;">Lorem ipsum dolor sit amet consectetur.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 p-lg-5 pb-4">
+                <div class="container1">
+                    <img class="img-fluid img_thumb" src="IMG\portfolio\landscape\6_land.JPG" alt="">
+                    <div class="overlay2">
+                        <div class="text_bott_center">
+                            TITRE
+                            <br>
+                            <p style="font-size:1.1vw;">Lorem ipsum dolor sit amet consectetur.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
