CSS Approvment + adding all images
landscape page done - maybe retry responsivness later

--- a/landscape.html
+++ b/landscape.html
@@ -53,6 +53,9 @@
             <div class="col-12 text-center">
                 <p class="display-4">LANDSCAPE</p>
             </div>
+            <div class="col-12 text-center">
+                <p class="display-6" style="font-size: 2vmax;">All images are captionned by the place they were taken</p>
+            </div>
         </div>
         <div class="row justify-content-center text-center p-5">
             <div class="col-12 p-lg-5 pb-4">
@@ -60,9 +63,9 @@
                     <img class="img-fluid img_thumb" src="IMG\portfolio\landscape\1_land.JPG" alt="">
                     <div class="overlay2">
                         <div class="text_bott_center">
-                            Anse Méjean
+                            Pradet
                             <br>
-                            <p style="font-size:1.1vw;">Lorem ipsum dolor sit amet consectetur.</p>
+                            <p style="font-size:1vmax;">Cap de Carqueiranne</p>
                         </div>
                     </div>
                 </div>
@@ -73,9 +76,9 @@
                     <img class="img-fluid img_thumb" src="IMG\portfolio\landscape\3_land.JPG" alt="">
                     <div class="overlay2">
                         <div class="text_bott_center">
-                            TITRE
+                            Anse Méjean
                             <br>
-                            <p style="font-size:1.1vw;">Lorem ipsum dolor sit amet consectetur.</p>
+                            <p style="font-size:1vmax;">"L'escale"</p>
                         </div>
                     </div>
                 </div>
@@ -86,21 +89,21 @@
                     <img class="img-fluid img_thumb" src="IMG\portfolio\landscape\2_land.JPG" alt="">
                     <div class="overlay2">
                         <div class="text_bott_center">
-                            TITRE
+                            Port de Méjean
                             <br>
-                            <p style="font-size:1.1vw;">Lorem ipsum dolor sit amet consectetur.</p>
+                            <p style="font-size:1vmax;">Vu sur Chapelle Notre-Dame-du-Cap-Falcon</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-12 p-lg-5 pb-4">
                 <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\landscape\4_land.JPG" alt="">
+                    <img class="img-fluid img_thumb" src="IMG\portfolio\landscape\4_land.jpg" alt="">
                     <div class="overlay2">
                         <div class="text_bott_center">
-                            TITRE
+                            Verdon
                             <br>
-                            <p style="font-size:1.1vw;">Lorem ipsum dolor sit amet consectetur.</p>
+                            <p style="font-size:1vmax;">Lac de Ste-Croix</p>
                         </div>
                     </div>
                 </div>
@@ -110,9 +113,9 @@
                     <img class="img-fluid img_thumb" src="IMG\portfolio\landscape\5_land.JPG" alt="">
                     <div class="overlay2">
                         <div class="text_bott_center">
-                            TITRE
+                            Ile du Gaou
                             <br>
-                            <p style="font-size:1.1vw;">Lorem ipsum dolor sit amet consectetur.</p>
+                            <p style="font-size:1vmax;">Pointe du Cougoussa</p>
                         </div>
                     </div>
                 </div>
@@ -122,9 +125,69 @@
                     <img class="img-fluid img_thumb" src="IMG\portfolio\landscape\6_land.JPG" alt="">
                     <div class="overlay2">
                         <div class="text_bott_center">
-                            TITRE
+                            La Tour Royale
                             <br>
-                            <p style="font-size:1.1vw;">Lorem ipsum dolor sit amet consectetur.</p>
+                            <p style="font-size:1vmax;">Toulon</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 p-lg-5 pb-4">
+                <div class="container1">
+                    <img class="img-fluid img_thumb" src="IMG\portfolio\landscape\7_land.jpg" alt="">
+                    <div class="overlay2">
+                        <div class="text_bott_center">
+                            Anse Magaud
+                            <br>
+                            <p style="font-size:1vmax;">Falaise Ouest</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 p-lg-5 pb-4">
+                <div class="container1">
+                    <img class="img-fluid img_thumb" src="IMG\portfolio\landscape\8_land.JPG" alt="">
+                    <div class="overlay2">
+                        <div class="text_bott_center">
+                            Tour Royale
+                            <br>
+                            <p style="font-size:1vmax;">Toulon</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 p-lg-5 pb-4">
+                <div class="container1">
+                    <img class="img-fluid img_thumb" src="IMG\portfolio\landscape\9_land.JPG" alt="">
+                    <div class="overlay2">
+                        <div class="text_bott_center">
+                            Port de Méjean
+                            <br>
+                            <p style="font-size:1vmax;">Panorama Saint-Mandrier</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 p-lg-5 pb-4">
+                <div class="container1">
+                    <img class="img-fluid img_thumb" src="IMG\portfolio\landscape\10_land.JPG" alt="">
+                    <div class="overlay2">
+                        <div class="text_bott_center">
+                            Pradet
+                            <br>
+                            <p style="font-size:1vmax;">Plage des Bonnettes</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 p-lg-5 pb-4">
+                <div class="container1">
+                    <img class="img-fluid img_thumb" src="IMG\portfolio\landscape\11_land.jpg" alt="">
+                    <div class="overlay2">
+                        <div class="text_bott_center">
+                            Pointe de Marégau
+                            <br>
+                            <p style="font-size:1vmax;">Saint-Mandrier</p>
                         </div>
                     </div>
                 </div>
