--- a/landscape.html
+++ b/landscape.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
-
+<html>
 <head>
     <title>Argentique-K&C</title>
     <meta charset="utf-8">
@@ -54,7 +53,8 @@
                 <p class="display-4">LANDSCAPE</p>
             </div>
             <div class="col-12 text-center">
-                <p class="display-6" style="font-size: 2vmax;">All images are captionned by the place they were taken</p>
+                <p class="display-6" style="font-size: 2vmax;">All images are captionned by the place they were taken
+                </p>
             </div>
         </div>
         <div class="row justify-content-center text-center p-5">
@@ -70,7 +70,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="col-12 p-lg-5 pb-4">
                 <div class="container1">
                     <img class="img-fluid img_thumb" src="IMG\portfolio\landscape\3_land.JPG" alt="">
@@ -83,7 +82,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="col-12 p-lg-5 pb-4">
                 <div class="container1">
                     <img class="img-fluid img_thumb" src="IMG\portfolio\landscape\2_land.JPG" alt="">
@@ -222,5 +220,4 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 </body>
-
 </html>
