--- a/landscape.html
+++ b/landscape.html
@@ -84,7 +84,7 @@
             </div>
             <div class="col-12 p-lg-5 pb-4">
                 <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\landscape\2_land.JPG" alt="">
+                    <img class="img-fluid img_thumb h-75" src="IMG\portfolio\landscape\2_land.JPG" alt="">
                     <div class="overlay2">
                         <div class="text_bott_center">
                             Port de Méjean
@@ -132,7 +132,7 @@
             </div>
             <div class="col-12 p-lg-5 pb-4">
                 <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\landscape\7_land.jpg" alt="">
+                    <img class="img-fluid img_thumb h-75" src="IMG\portfolio\landscape\7_land.jpg" alt="">
                     <div class="overlay2">
                         <div class="text_bott_center">
                             Anse Magaud
