Add images to portrait + caption (all) + responsivness
All portrait are added.
All compressed.
All caption are added.
Responsivness DONE
Grammar DONE

! PORTRAIT.html DONE !

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- A FAIRE :
-    -page catégorie de photos...
+    -page street + other
     -alimenter le blog...
     -selecteur de langue (voir tuto)
     -animation menu déroulant téléphone (bug)
