--- a/portrait.html
+++ b/portrait.html
@@ -108,7 +108,7 @@
             </div>
             <div class="col-10 p-lg-5 pb-4">
                 <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\portrait\5_p.jpg" alt="">
+                    <img class="img-fluid img_thumb" src="IMG\portfolio\portrait\5_p.JPG" alt="">
                     <div class="overlay2">
                         <div class="text_bott_center">
                             Emmy
@@ -144,7 +144,7 @@
             </div>
             <div class="col-10 p-lg-5 pb-4">
                 <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\portrait\8_p.jpg" alt="">
+                    <img class="img-fluid img_thumb" src="IMG\portfolio\portrait\8_p.JPG" alt="">
                     <div class="overlay2">
                         <div class="text_bott_center">
                             Vincent
