--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<!-- A FAIRE :
+<!-- TODO LIST :
     -page street + other
     -alimenter le blog...
     -selecteur de langue (voir tuto)
     -animation menu déroulant téléphone (bug)
+    -site icon + edit page title (all)
 -->
 <html>
     <head>
-        <title>Projet CANADA</title>
+        <title>K&C - Adventures</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">        
         <link href="bootstrap-5.1.3-dist/css/bootstrap.css" rel="stylesheet" type="text/css"/>
