--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
     <!-- if new post : go to "gallery start" copy paste with the new settings above the last added post-->
     <!-- if new post : go to "gallery start" copy paste with the new settings above the last added post-->
     <head>
-        <title>Projet CANADA</title>
+        <title>K&C-Blog</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="bootstrap-5.1.3-dist/css/bootstrap.css" rel="stylesheet" type="text/css"/>
@@ -21,7 +21,7 @@
     <body class="text-light d-flex h-100 fade-in" style="background-color: #f5f6fa ; font-family: 'Jura', sans-serif;">
         <div class="container text-decoration-none text-dark">
             <nav class="navbar navbar-expand-lg navbar-light" id="nav1">
-                <a class="navbar-brand" href="#"><img class="rounded-circle" src="IMG/logo1.png" alt="Generic placeholder image" width="50" height="50"></a>
+                <a class="navbar-brand" href="index.html"><img class="rounded-circle" src="IMG/logo1.png" alt="Generic placeholder image" width="50" height="50"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
