Street Page + minor css correction
Street page seems to be DONE.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     -selecteur de langue (voir tuto)
     -animation menu déroulant téléphone (bug)
     -site icon + edit page title (all)
+    -size du texte dans portfolio quand écran >2500px sur les formats paysages(bug)
 -->
 <html>
     <head>
