--- a/portrait.html
+++ b/portrait.html
@@ -206,7 +206,7 @@
                 <div class="container1">
                     <img class="img-fluid img_thumb" src="IMG\portfolio\portrait\13_p.jpg" alt="">
                     <div class="overlay2">
-                        <div class="text_bott_center">
+                        <div class="text_bott_center_paysage">
                             Stranger
                             <br>
                             <p style="font-size:1vmax;">Montréal - Québec</p>
