--- a/street.html
+++ b/street.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <title>K&C-Landscape</title>
+    <title>KT-Street</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="bootstrap-5.1.3-dist/css/bootstrap.css" rel="stylesheet" type="text/css" />
@@ -47,10 +48,11 @@
                 </span>
             </div>
         </nav>
+
         <div class="row p-lg-4"></div>
         <div class="row p-4 justify-content-center">
             <div class="col-12 text-center">
-                <p class="display-4">LANDSCAPE</p>
+                <p class="display-4">STREET</p>
             </div>
             <div class="col-12 text-center">
                 <p class="display-6" style="font-size: 2vmax;">All images are captionned by the place they were taken
@@ -60,138 +62,185 @@
         <div class="row justify-content-center text-center p-5">
             <div class="col-10 p-lg-5 pb-4">
                 <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\landscape\1_land.JPG" alt="">
-                    <div class="overlay2">
-                        <div class="text_bott_center_paysage">
-                            Pradet
-                            <br>
-                            <p style="font-size:1vmax;">Cap de Carqueiranne</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-10 p-lg-5 pb-4">
-                <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\landscape\3_land.JPG" alt="">
-                    <div class="overlay2">
-                        <div class="text_bott_center_paysage">
-                            Anse Méjean
-                            <br>
-                            <p style="font-size:1vmax;">"L'escale"</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-10 p-lg-5 pb-4">
-                <div class="container1">
-                    <img class="img-fluid img_thumb h-75" src="IMG\portfolio\landscape\2_land.JPG" alt="">
+                    <img class="img-fluid img_thumb" src="IMG\portfolio\street\1_street.jpg" alt="">
                     <div class="overlay2">
                         <div class="text_bott_center">
-                            Port de Méjean
+                            Place liberté
                             <br>
-                            <p style="font-size:1vmax;">Vu sur Chapelle Notre-Dame-du-Cap-Falcon</p>
+                            <p style="font-size:1vmax;">Manif Electro</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-10 p-lg-5 pb-4">
                 <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\landscape\4_land.jpg" alt="">
+                    <img class="img-fluid img_thumb" src="IMG\portfolio\street\2_street.JPG" alt="">
                     <div class="overlay2">
                         <div class="text_bott_center_paysage">
-                            Verdon
+                            Toulon
                             <br>
-                            <p style="font-size:1vmax;">Lac de Ste-Croix</p>
+                            <p style="font-size:1vmax;">Manif BLM</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-10 p-lg-5 pb-4">
                 <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\landscape\5_land.JPG" alt="">
+                    <img class="img-fluid img_thumb h-75" src="IMG\portfolio\street\3_street.JPG" alt="">
                     <div class="overlay2">
                         <div class="text_bott_center_paysage">
-                            Ile du Gaou
+                            Toulon
                             <br>
-                            <p style="font-size:1vmax;">Pointe du Cougoussa</p>
+                            <p style="font-size:1vmax;">Manif BLM</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-10 p-lg-5 pb-4">
                 <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\landscape\6_land.JPG" alt="">
-                    <div class="overlay2">
-                        <div class="text_bott_center_paysage">
-                            La Tour Royale
-                            <br>
-                            <p style="font-size:1vmax;">Toulon</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-10 p-lg-5 pb-4">
-                <div class="container1">
-                    <img class="img-fluid img_thumb h-75" src="IMG\portfolio\landscape\7_land.jpg" alt="">
+                    <img class="img-fluid img_thumb" src="IMG\portfolio\street\4_street.jpg" alt="">
                     <div class="overlay2">
                         <div class="text_bott_center">
-                            Anse Magaud
+                            Toulon
                             <br>
-                            <p style="font-size:1vmax;">Falaise Ouest</p>
+                            <p style="font-size:1vmax;">Manif Electro</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-10 p-lg-5 pb-4">
                 <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\landscape\8_land.JPG" alt="">
+                    <img class="img-fluid img_thumb" src="IMG\portfolio\street\5_street.jpg" alt="">
                     <div class="overlay2">
                         <div class="text_bott_center_paysage">
-                            Tour Royale
+                            Toulon
                             <br>
-                            <p style="font-size:1vmax;">Toulon</p>
+                            <p style="font-size:1vmax;">Manif Covid</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-10 p-lg-5 pb-4">
                 <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\landscape\9_land.JPG" alt="">
+                    <img class="img-fluid img_thumb" src="IMG\portfolio\street\6_street.JPG" alt="">
                     <div class="overlay2">
                         <div class="text_bott_center_paysage">
-                            Port de Méjean
+                            Toulon
                             <br>
-                            <p style="font-size:1vmax;">Panorama Saint-Mandrier</p>
+                            <p style="font-size:1vmax;">Théâtre</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-10 p-lg-5 pb-4">
                 <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\landscape\10_land.JPG" alt="">
+                    <img class="img-fluid img_thumb h-75" src="IMG\portfolio\street\7_street.jpg" alt="">
                     <div class="overlay2">
-                        <div class="text_bott_center_paysage">
-                            Pradet
+                        <div class="text_bott_center">
+                            Toulon
                             <br>
-                            <p style="font-size:1vmax;">Plage des Bonnettes</p>
+                            <p style="font-size:1vmax;">Anonymous</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-10 p-lg-5 pb-4">
                 <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\landscape\11_land.jpg" alt="">
+                    <img class="img-fluid img_thumb" src="IMG\portfolio\street\8_street.JPG" alt="">
                     <div class="overlay2">
                         <div class="text_bott_center_paysage">
-                            Marégau
+                            Toulon
                             <br>
-                            <p style="font-size:1vmax;">Saint-Mandrier</p>
+                            <p style="font-size:1vmax;">Place de la Liberté</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-10 p-lg-5 pb-4">
+                <div class="container1">
+                    <img class="img-fluid img_thumb" src="IMG\portfolio\street\9_street.JPG" alt="">
+                    <div class="overlay2">
+                        <div class="text_bott_center">
+                            Toulon
+                            <br>
+                            <p style="font-size:1vmax;">Strangers</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-10 p-lg-5 pb-4">
+                <div class="container1">
+                    <img class="img-fluid img_thumb" src="IMG\portfolio\street\10_street.jpg" alt="">
+                    <div class="overlay2">
+                        <div class="text_bott_center">
+                            Place Liberté
+                            <br>
+                            <p style="font-size:1vmax;">Manif Electro</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-10 p-lg-5 pb-4">
+                <div class="container1">
+                    <img class="img-fluid img_thumb" src="IMG\portfolio\street\11_street.JPG" alt="">
+                    <div class="overlay2">
+                        <div class="text_bott_center">
+                            Toulon
+                            <br>
+                            <p style="font-size:1vmax;">Manif BLM</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-10 p-lg-5 pb-4">
+                <div class="container1">
+                    <img class="img-fluid img_thumb" src="IMG\portfolio\street\12_street.jpg" alt="">
+                    <div class="overlay2">
+                        <div class="text_bott_center">
+                            Toulon
+                            <br>
+                            <p style="font-size:1vmax;">Manif Electro</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-10 p-lg-5 pb-4">
+                <div class="container1">
+                    <img class="img-fluid img_thumb" src="IMG\portfolio\street\13_street.jpg" alt="">
+                    <div class="overlay2">
+                        <div class="text_bott_center">
+                            Toulon
+                            <br>
+                            <p style="font-size:1vmax;">Mayol</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-10 p-lg-5 pb-4">
+                <div class="container1">
+                    <img class="img-fluid img_thumb" src="IMG\portfolio\street\14_street.jpg" alt="">
+                    <div class="overlay2">
+                        <div class="text_bott_center">
+                            Toulon
+                            <br>
+                            <p style="font-size:1vmax;">Mayol</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-10 p-lg-5 pb-4">
+                <div class="container1">
+                    <img class="img-fluid img_thumb" src="IMG\portfolio\street\15_street.jpg" alt="">
+                    <div class="overlay2">
+                        <div class="text_bott_center">
+                            Toulon
+                            <br>
+                            <p style="font-size:1vmax;">Mayol</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
 
         <div class="row p-4"></div>
         <div class="row justify-content-center p-2">
@@ -204,6 +253,7 @@
                             class="fab fa-linkedin  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
             </div>
         </div>
+
         <!-- Copyright -->
         <div class="text-center text-black text-decoration-none p-3">
             © 2071 Copyright:
@@ -220,4 +270,5 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
